--- a/htmltraining2.html
+++ b/htmltraining2.html
@@ -11,20 +11,21 @@
 <body>
     <h1 class="mgmg">Welcome to Zuckerberg company</h1>
     <p class="ayeaye">Mark Zuckerberg Founder, Chairman and Chief Executive Officer. Mark Zuckerberg is the founder, chairman and CEO of Meta, which he originally founded as Facebook in 2004. Mark is responsible for setting the overall direction and product strategy for the company.</p>
-
+    <img src="./photo2.jpg" alt="">
     <h2 class="tuntun">Welcome to Zuckerberg family</h2>
     <p class="nunu">Early life and education. Mark Elliot Zuckerberg was born on May 14, 1984, in White Plains, New York to psychiatrist Karen (née Kempner) and dentist Edward Zuckerberg. He and his three sisters (Arielle, Randi, and Donna) were raised in a Reform Jewish household in Dobbs Ferry, New York.</p>
-
+    <img src="./photo3.jpg" alt="">
     <h3 class="thel">Welcome to Zuckerberg biography</h3>
     <p class="su">Mark Elliot Zuckerberg (/ˈzʌkərbɜːrɡ/; born May 14, 1984) is an American businessman and philanthropist. He co-founded the social media service Facebook, along with his Harvard roommates in 2004, and its parent company Meta Platforms (formerly Facebook, Inc.), of which he is executive chairman, chief executive officer and controlling shareholder.</p>
-
+    <img src="./photo4.jpg" alt="">
     <h3 class="agag">Welcome to Elonbusk family</h3>
     <p class="swe">Elon Musk is a father of 11 children with three different women. The mother of three of the tech entrepreneur's children, the artist Grimes, recently filed a petition in court to establish parental rights after her split with Musk.</p>
-
+    <img src="./photo5.jpg" alt="">
     <h2 class="wewe">Welcome to Elonbusk company</h2>
     <p class="phyo">Elon Musk co-founded and leads Tesla, SpaceX, Neuralink and The Boring Company. As the co-founder and CEO of Tesla, Elon leads all product design, engineering and global manufacturing of the company's electric vehicles, battery products and solar energy products.</p>
-
+    <img src="./photo6.jpg" alt="">
     <h1 class="yuyu">Welcome to Elonbusk biography</h1>
     <p class="didi">Elon Musk. FRS ; Born. Elon Reeve Musk. (1971-06-28) June 28, 1971 (age 52). Pretoria, Transvaal, South Africa ; Citizenship. South Africa; Canada; United States</p>
+    <img src="./photo7.jpg" alt="">
 </body>
 </html>
